k8s/apps/accounting/actual/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  namespace: actual
  labels:
    app.kubernetes.io/name: actual
    app.kubernetes.io/instance: actual
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: actual
      app.kubernetes.io/instance: actual
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actual
        app.kubernetes.io/instance: actual
        emnt.dev/velero-backup: "true"
      annotations:
        backup.velero.io/backup-volumes: data
    spec:
      containers:
        - name: actual-server
          image: docker.io/actualbudget/actual-server:26.5.0
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: http
              containerPort: 5006
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-data
