k8s/apps/accounting/actual/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual
  namespace: actual
  labels:
    app.kubernetes.io/name: actual
    app.kubernetes.io/instance: actual
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: actual.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual
                port:
                  name: http
